--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
+    "html2canvas": "^1.4.1",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
