--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.4.1",
     "ngx-bootstrap": "^9.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -39,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "owl-carousel": "^1.0.0",
     "typescript": "~4.7.2"
   }
 }
