--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,9 @@
               "src/styles.css",
               "src/assets/styles/custom-responsive-styles.css",
               "src/assets/styles/landing-styles.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-              
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"    
             ]
           },
           "configurations": {
@@ -95,7 +96,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js"
+            ]
           }
         }
       }
