--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.4.1",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-owl-carousel-o": "^14.0.1",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
